# Comic-Book-Reader-Writer

./: LICENSE  README.md  article.pptx
CBR/: CMakeLists.txt  archivemanager.cpp  archivemanager.h  browsermanager.cpp  browsermanager.h  imgmanager.cpp  imgmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylistwidgetdelegate.cpp  mylistwidgetdelegate.h
build-CBR-Desktop_Qt_5_14_2_GCC_64bit-Release/: CBR  CBR.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
build-CBR-Desktop_Qt_5_14_2_GCC_64bit-Release/.cmake/api/v1/reply/: cache-v2-3dfa4eec717a761bf79b.json  cmakeFiles-v1-1b054088c93d892eb4ac.json  codemodel-v2-0641cdf83cfed11b9589.json  index-2021-03-07T10-34-22-0326.json  target-CBR-Release-53b0d1475ec1471a61b5.json  target-CBR_autogen-Release-ac058bdcd25dba6e284a.json
build-CBR-Desktop_Qt_5_14_2_GCC_64bit-Release/CBR_autogen/: mocs_compilation.cpp
build-CBR-Desktop_Qt_5_14_2_GCC_64bit-Release/CBR_autogen/EWIEGA46WW/: moc_imgmanager.cpp  moc_mainwindow.cpp  moc_mylistwidgetdelegate.cpp
build-CBR-Desktop_Qt_5_14_2_GCC_64bit-Release/CBR_autogen/include/: ui_mainwindow.h
